--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,8 +19,8 @@ body {
 .m-scene .scene_element {
     -webkit-animation-duration: 0.25s;
     animation-duration: 0.25s;
-    -webkit-transition-timing-function: ease-in;
-    transition-timing-function: ease-in;
+    -webkit-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both; }
 /* line 17, /Users/mperez/Sites/smoothstate/source/stylesheets/pageTransitions.css.scss */
